--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -531,7 +531,7 @@
                     <!--android:textSize="@dimen/medium_text"-->
                     <!--android:layout_columnWeight="0"/>-->
 
-                <!--<Spinner-->
+                <!--<spinner-->
                     <!--android:layout_column="1"-->
                     <!--android:id="@+id/vou_spinner"-->
                     <!--android:layout_width="wrap_content"-->
