--- a/app/src/main/res/layout/content_form_default_aset.xml
+++ b/app/src/main/res/layout/content_form_default_aset.xml
@@ -499,7 +499,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/xmin_padding"
                                 android:layout_weight="1"
-                                android:checked="false"
+                                android:checked="true"
                                 android:paddingEnd="@dimen/min_padding"
                                 android:text="Dikirim" />
 
@@ -509,7 +509,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/xmin_padding"
                                 android:layout_weight="1"
-                                android:checked="false"
+                                android:checked="true"
                                 android:paddingEnd="@dimen/min_padding"
                                 android:text="Diambil" />
 
@@ -1609,9 +1609,7 @@
                         android:layout_height="wrap_content"
                         android:text="Gambar Aset"
                         android:textColor="@color/colorBlack"
-                        android:textSize="12sp"
-                        android:layout_marginBottom="@dimen/xmin_padding"
-                        />
+                        android:textSize="12sp" />
 
                     <HorizontalScrollView
                         android:layout_width="match_parent"
@@ -1631,41 +1629,101 @@
                                 android:background="@color/colorNearWhite"
                                 app:srcCompat="@drawable/add_picture" />
 
-                            <ImageView
-                                android:id="@+id/second_image"
-                                android:layout_width="@dimen/thumb_width"
-                                android:layout_height="@dimen/thumb_width"
-                                android:layout_margin="@dimen/small_space"
-                                android:background="@color/colorNearWhite"
-                                android:visibility="gone"
-                                android:src="@drawable/add_picture" />
+                            <RelativeLayout
+                                android:id="@+id/con_second_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone">
 
-                            <ImageView
-                                android:id="@+id/third_image"
-                                android:layout_width="@dimen/thumb_width"
-                                android:layout_height="@dimen/thumb_width"
-                                android:layout_margin="@dimen/small_space"
-                                android:background="@color/colorNearWhite"
-                                android:visibility="gone"
-                                app:srcCompat="@drawable/add_picture" />
+                                <ImageView
+                                    android:id="@+id/second_image"
+                                    android:layout_width="@dimen/thumb_width"
+                                    android:layout_height="@dimen/thumb_width"
+                                    android:background="@color/colorNearWhite"
+                                    android:src="@drawable/add_picture"
+                                    android:layout_margin="@dimen/small_space"
+                                    />
 
-                            <ImageView
-                                android:id="@+id/fourth_image"
-                                android:layout_width="@dimen/thumb_width"
-                                android:layout_height="@dimen/thumb_width"
-                                android:layout_margin="@dimen/small_space"
-                                android:background="@color/colorNearWhite"
-                                android:visibility="gone"
-                                app:srcCompat="@drawable/add_picture" />
+                                <ImageButton
+                                    android:id="@+id/delete_second_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/cirle_default_label"
+                                    android:src="@drawable/ic_close_black_18dp"
+                                    android:visibility="gone"/>
+                            </RelativeLayout>
 
-                            <ImageView
-                                android:id="@+id/fifth_image"
-                                android:layout_width="@dimen/thumb_width"
-                                android:layout_height="@dimen/thumb_width"
-                                android:layout_margin="@dimen/small_space"
-                                android:background="@color/colorNearWhite"
-                                android:visibility="gone"
-                                app:srcCompat="@drawable/add_picture" />
+                            <RelativeLayout
+                                android:id="@+id/con_third_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone">
+
+                                <ImageView
+                                    android:id="@+id/third_image"
+                                    android:layout_width="@dimen/thumb_width"
+                                    android:layout_height="@dimen/thumb_width"
+                                    android:background="@color/colorNearWhite"
+                                    android:src="@drawable/add_picture"
+                                    android:layout_margin="@dimen/small_space"
+                                    />
+
+                                <ImageButton
+                                    android:id="@+id/delete_third_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/cirle_default_label"
+                                    android:src="@drawable/ic_close_black_18dp"
+                                    android:visibility="gone"/>
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/con_fourth_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone">
+
+                                <ImageView
+                                    android:id="@+id/fourth_image"
+                                    android:layout_width="@dimen/thumb_width"
+                                    android:layout_height="@dimen/thumb_width"
+                                    android:background="@color/colorNearWhite"
+                                    android:src="@drawable/add_picture"
+                                    android:layout_margin="@dimen/small_space"
+                                    />
+
+                                <ImageButton
+                                    android:id="@+id/delete_fourth_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/cirle_default_label"
+                                    android:src="@drawable/ic_close_black_18dp"
+                                    android:visibility="gone"/>
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:id="@+id/con_fifth_image"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:visibility="gone">
+
+                                <ImageView
+                                    android:id="@+id/fifth_image"
+                                    android:layout_width="@dimen/thumb_width"
+                                    android:layout_height="@dimen/thumb_width"
+                                    android:background="@color/colorNearWhite"
+                                    android:src="@drawable/add_picture"
+                                    android:layout_margin="@dimen/small_space"
+                                    />
+
+                                <ImageButton
+                                    android:id="@+id/delete_fifth_image"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@drawable/cirle_default_label"
+                                    android:src="@drawable/ic_close_black_18dp"
+                                    android:visibility="gone"/>
+                            </RelativeLayout>
 
                         </LinearLayout>
 
