--- a/app/src/main/res/layout/content_form_driver.xml
+++ b/app/src/main/res/layout/content_form_driver.xml
@@ -34,7 +34,8 @@
                     android:layout_width="@dimen/thumb_height"
                     android:layout_height="@dimen/thumb_height"
                     android:layout_weight="1"
-                    android:background="@drawable/user_ava_man" />
+                    android:background="@drawable/cirle_default_label"
+                    android:src="@drawable/img" />
 
                 <Button
                     android:id="@+id/btnUploadFoto"
