--- a/app/src/main/res/layout/content_form_voucher.xml
+++ b/app/src/main/res/layout/content_form_voucher.xml
@@ -270,7 +270,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/xmin_padding"
                                 android:layout_weight="1"
-                                android:checked="false"
+                                android:checked="true"
                                 android:paddingEnd="@dimen/min_padding"
                                 android:text="Web" />
 
@@ -280,7 +280,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/xmin_padding"
                                 android:layout_weight="1"
-                                android:checked="false"
+                                android:checked="true"
                                 android:paddingEnd="@dimen/min_padding"
                                 android:text="Mobile" />
 
