--- a/app/src/main/res/layout/content_form_add_kebijakan.xml
+++ b/app/src/main/res/layout/content_form_add_kebijakan.xml
@@ -14,42 +14,68 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="@dimen/min_padding"
+        android:padding="@dimen/xmin_padding"
         android:layout_margin="@dimen/xmin_padding"
         android:background="@drawable/radius_white"
         android:focusableInTouchMode="true">
 
-        <EditText
-            android:id="@+id/kbj_title"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:backgroundTint="@color/colorGrey"
-            android:ems="10"
-            android:gravity="start"
-            android:hint="Perihal"
-            android:inputType="text"
-            android:padding="@dimen/min_padding"
-            android:textColor="@android:color/black"
-            android:textCursorDrawable="@null" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/xmin_padding"
+            android:orientation="vertical"
+            android:padding="@dimen/xmin_padding">
 
-        <EditText
-            android:id="@+id/kbj_desc"
+            <TextView
+                android:id="@+id/textView25"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Judul"
+                android:textColor="@color/colorBlack"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/kbj_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorNearWhite"
+                android:ems="10"
+                android:hint="Judul"
+                android:imeOptions="actionNext"
+                android:inputType="text|textCapWords"
+                android:padding="@dimen/min_padding"
+                android:text="" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
-            android:backgroundTint="@color/colorGrey"
-            android:ems="10"
-            android:gravity="start"
-            android:hint="Deskripsi"
-            android:inputType="textMultiLine"
-            android:lines="3"
-            android:maxLines="5"
-            android:padding="@dimen/min_padding"
-            android:textColor="@android:color/black"
-            android:textColorHighlight="@color/colorPrimary"
-            android:textCursorDrawable="@null" />
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/xmin_padding"
+            android:orientation="vertical"
+            android:padding="@dimen/xmin_padding">
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Deskripsi"
+                android:textColor="@color/colorBlack"
+                android:textSize="12sp" />
+
+            <EditText
+                android:id="@+id/kbj_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorNearWhite"
+                android:ems="10"
+                android:gravity="start"
+                android:hint="Deskripsi"
+                android:inputType="textMultiLine|textCapSentences"
+                android:lines="5"
+                android:padding="@dimen/min_padding"
+                />
+        </LinearLayout>
+
 
     </LinearLayout>
 
@@ -57,12 +83,14 @@
         android:id="@+id/btn_add"
         android:layout_width="match_parent"
         android:layout_height="@dimen/btn_lmedium_height"
-        android:layout_alignParentBottom="true"
         android:background="@color/colorPrimaryDark"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/medium_text"
         android:text="Simpan"
-        android:layout_margin="0dp"
-        android:padding="0dp" />
+        android:padding="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true" />
 
 </RelativeLayout>
