--- a/app/src/main/res/layout/kebijakan_khusus_view.xml
+++ b/app/src/main/res/layout/kebijakan_khusus_view.xml
@@ -28,11 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:padding="@dimen/min_padding"
+                android:padding="@dimen/xmin_padding"
                 android:clickable="true"
                 android:id="@+id/expand">
 
-                <GridLayout
+                <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
@@ -40,10 +40,24 @@
                         android:id="@+id/kbj_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textColor="@color/colorPrimaryDark"
-                        android:textSize="@dimen/medium_text"
+                        android:textSize="@dimen/small_text"
+                        android:layout_centerVertical="true"
                         android:textStyle="bold"
+                        android:layout_marginStart="@dimen/xmin_padding"
                         android:text="Kebijakan"/>
+
+                    <TextView
+                        android:id="@+id/kbj_edit"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ubah"
+                        android:textColor="@color/colorPrimaryDark"
+                        android:textSize="@dimen/small_text"
+                        android:clickable="true"
+                        android:layout_toStartOf="@+id/expandable_toggle_button"
+                        android:layout_marginEnd="@dimen/xmin_padding"
+                        android:layout_centerVertical="true"
+                        />
 
                     <ImageView
                         android:id="@+id/expandable_toggle_button"
@@ -51,9 +65,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:background="@color/colorWhite"
-                        android:layout_gravity="end|center_vertical"/>
+                        android:layout_gravity="end|center_vertical"
+                        android:layout_alignParentEnd="true"/>
 
-                </GridLayout>
+                </RelativeLayout>
 
             </RelativeLayout>
 
@@ -64,7 +79,7 @@
                 android:layout_height="wrap_content"
                 android:paddingRight="@dimen/min_padding"
                 android:paddingLeft="@dimen/min_padding"
-                android:visibility="gone"
+                android:paddingBottom="@dimen/min_padding"
                 >
 
                 <View
@@ -74,18 +89,14 @@
                     android:background="@android:color/darker_gray"/>
 
                 <TextView
-                    android:id="@+id/kbj_edit"
-                    android:layout_below="@+id/kbj_desc"
+
+                    android:id="@+id/tesx1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/xmin_padding"
-                    android:text="Ubah"
-                    android:textColor="@color/colorPrimaryDark"
-                    android:textSize="@dimen/small_text"
-                    android:clickable="true"
-                    android:layout_alignParentEnd="true"
-                    android:layout_marginBottom="@dimen/xmin_padding"
-                    />
+                    android:layout_alignParentStart="true"
+                    android:text="Deskripsi :"
+                    android:textSize="@dimen/under_small_text" />
 
                 <TextView
                     android:id="@+id/kbj_desc"
@@ -93,10 +104,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/xmin_padding"
                     android:layout_alignParentStart="true"
+                    android:layout_below="@+id/tesx1"
                     android:text="Deskripsi"
-                    android:maxLines="5"
-                    android:textSize="@dimen/small_text" />
-
+                    android:textSize="@dimen/almost_tiny_text" />
 
             </RelativeLayout>
         </LinearLayout>
