--- a/app/src/main/res/layout/kebijakan_khusus_view.xml
+++ b/app/src/main/res/layout/kebijakan_khusus_view.xml
@@ -80,6 +80,7 @@
                 android:paddingRight="@dimen/min_padding"
                 android:paddingLeft="@dimen/min_padding"
                 android:paddingBottom="@dimen/min_padding"
+                android:visibility="gone"
                 >
 
                 <View
