--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -64,6 +64,44 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:id="@+id/account_data_verif_notif"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorOrangeSoft"
+                android:orientation="horizontal"
+                android:padding="@dimen/xmin_padding"
+                android:visibility="gone"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:text="Akun Anda Sedang Diverifikasi"
+                        android:textColor="?android:attr/colorMultiSelectHighlight"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_gravity="center_vertical"
+                    android:padding="@dimen/xmin_padding"
+                    app:srcCompat="@android:drawable/ic_dialog_info" />
+
+            </LinearLayout>
+
             <!--head breadsrumb-->
 
             <RelativeLayout
@@ -75,9 +113,9 @@
                 <RelativeLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
                     android:layout_centerHorizontal="true"
-                    android:layout_centerInParent="true">
+                    android:layout_centerInParent="true"
+                    android:orientation="horizontal">
 
                     <TextView
                         android:id="@+id/rentName"
@@ -173,7 +211,8 @@
                 android:id="@+id/rl_new_trans"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/explorer_item_size"
-                android:background="@color/colorWhite">
+                android:background="@color/colorWhite"
+                android:clickable="true">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -329,7 +368,8 @@
                     android:layout_height="@dimen/breadcrumb_height"
                     android:layout_marginBottom="@dimen/xmin_padding">
 
-                    <RelativeLayout
+                    <LinearLayout
+                        android:id="@+id/con_rating"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_column="0"
@@ -337,172 +377,41 @@
                         android:layout_weight="1"
                         android:background="@color/colorWhite"
                         android:orientation="vertical"
-                        android:padding="@dimen/min_padding">
+                        android:padding="@dimen/med_padding"
+                        >
 
-                        <RelativeLayout
-                            android:id="@+id/nilaitext"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content">
-
-                            <TextView
-                                android:id="@+id/stat_info_1"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:layout_centerHorizontal="true"
-                                android:text="Nilai"
-                                android:layout_centerVertical="true"
-                                android:textSize="@dimen/small_text" />
-
-                            <ImageView
-                                android:id="@+id/img_stat_1"
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_toStartOf="@id/stat_info_1"
-                                android:layout_marginBottom="@dimen/xmin_padding"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:layout_marginEnd="@dimen/xmin_padding"
-                                app:srcCompat="@drawable/rating_ico" />
-
-                            <ImageView
-                                android:layout_width="25dp"
-                                android:layout_height="25dp"
-                                android:layout_toEndOf="@id/stat_info_1"
-                                android:layout_marginBottom="@dimen/xmin_padding"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:layout_marginStart="@dimen/xmin_padding"
-                                app:srcCompat="@drawable/rating_ico" />
-
-                        </RelativeLayout>
-
-                        <LinearLayout
-                            android:id="@+id/rating_1"
+                        <TextView
+                            android:id="@+id/stat_info"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_below="@+id/nilaitext"
-                            android:layout_alignParentStart="true">
+                            android:layout_marginTop="@dimen/xmin_padding"
+                            android:gravity="center"
+                            android:text="Nilai"
+                            android:textSize="@dimen/small_text" />
 
-                            <TextView
-                                android:id="@+id/kebersihan"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:text="Kebersihan"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/under_small_text" />
+                        <ImageView
+                            android:id="@+id/img_stat"
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/btn_medium_height"
+                            android:layout_gravity="center"
+                            android:layout_marginBottom="@dimen/xmin_padding"
+                            android:layout_marginTop="@dimen/xmin_padding"
+                            app:srcCompat="@drawable/rating_ico" />
 
-                            <TextView
-                                android:id="@+id/kerapihan"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:text="Kerapihan"
-                                android:layout_weight="1"
-                                android:textAlignment="center"
-                                android:textSize="@dimen/under_small_text" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/rating_2"
+                        <TextView
+                            android:id="@+id/val_sum_rating"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_below="@+id/rating_1"
-                            android:layout_alignParentStart="true">
+                            android:text="0"
+                            android:textAlignment="center"
+                            android:textColor="@color/colorPrimary"
+                            android:textSize="@dimen/large_text"
+                            android:textStyle="bold" />
 
-                            <TextView
-                                android:id="@+id/cleanliness_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/small_space"
-                                android:text="0"
-                                android:textStyle="bold"
-                                android:textColor="@color/colorPrimary"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/small_text" />
-
-                            <TextView
-                                android:id="@+id/neatness_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/small_space"
-                                android:text="0"
-                                android:textStyle="bold"
-                                android:textColor="@color/colorPrimary"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/small_text" />
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/rating_3"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_below="@+id/rating_2"
-                            android:layout_alignParentStart="true">
-                            <TextView
-                                android:id="@+id/kejujuran"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:text="Kejujuran"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/under_small_text" />
-
-                            <TextView
-                                android:id="@+id/komunikasi"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/xmin_padding"
-                                android:text="Komunikasi"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/under_small_text" />
-
-                        </LinearLayout>
-
-                        <LinearLayout
-                            android:id="@+id/rating_4"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal"
-                            android:layout_below="@+id/rating_3"
-                            android:layout_alignParentStart="true">
-
-                            <TextView
-                                android:id="@+id/honesty_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/small_space"
-                                android:text="0"
-                                android:textStyle="bold"
-                                android:textColor="@color/colorPrimary"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/small_text" />
-
-                            <TextView
-                                android:id="@+id/comunication_rating"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_marginTop="@dimen/small_space"
-                                android:text="0"
-                                android:textStyle="bold"
-                                android:textColor="@color/colorPrimary"
-                                android:textAlignment="center"
-                                android:layout_weight="1"
-                                android:textSize="@dimen/small_text" />
-                        </LinearLayout>
-
-
-                    </RelativeLayout>
+                    </LinearLayout>
 
                     <LinearLayout
+                        android:id="@+id/con_aset"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
                         android:layout_column="1"
