--- a/app/src/main/res/layout/content_member_profile.xml
+++ b/app/src/main/res/layout/content_member_profile.xml
@@ -343,7 +343,7 @@
                                     android:layout_width="@dimen/files_image"
                                     android:layout_height="@dimen/files_image"
                                     android:adjustViewBounds="false"
-                                    android:background="@drawable/img_default"
+                                    android:src="@drawable/img_default"
                                     />
 
                                 <ImageView
@@ -351,7 +351,7 @@
                                     android:layout_width="@dimen/files_image"
                                     android:layout_height="@dimen/files_image"
                                     android:adjustViewBounds="false"
-                                    android:background="@drawable/img_default"
+                                    android:src="@drawable/img_default"
                                     android:layout_marginStart="@dimen/xmin_padding"
                                     />
 
@@ -360,7 +360,7 @@
                                     android:layout_width="@dimen/files_image"
                                     android:layout_height="@dimen/files_image"
                                     android:adjustViewBounds="false"
-                                    android:background="@drawable/img_default"
+                                    android:src="@drawable/img_default"
                                     android:layout_marginStart="@dimen/xmin_padding"
                                     />
 
