--- a/app/src/main/res/layout/fragment_kebijakan_umum.xml
+++ b/app/src/main/res/layout/fragment_kebijakan_umum.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="id.rentist.mitrarentist.fragment.HistoryTransFragment">
+    tools:context="id.rentist.mitrarentist.fragment.KebijakanUmumFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/kbju_recyclerViewFrag"
