--- a/app/src/main/res/layout/testimony_view.xml
+++ b/app/src/main/res/layout/testimony_view.xml
@@ -20,81 +20,167 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:orientation="vertical"
-            android:padding="@dimen/xmin_padding">
+            android:orientation="vertical">
 
             <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:id="@+id/tm_aset_item"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentStart="true"
-                    android:layout_margin="@dimen/xmin_padding"
-                    android:layout_marginStart="@dimen/xmin_padding"
-                    android:padding="@dimen/xmin_padding"
-                    android:text="Honda Jazz"
-                    android:textSize="@dimen/medium_text"
-                    android:textStyle="bold" />
-
-                <com.iarcuschin.simpleratingbar.SimpleRatingBar
-                    android:id="@+id/tm_aset_rating"
-                    style="@style/CustomRatingBar"
-                    android:layout_width="75dp"
-                    android:layout_height="30dp"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerHorizontal="false"
-                    android:layout_centerVertical="true"
-                    android:layout_margin="@dimen/xmin_padding"
-                    app:srb_isIndicator="true"
-                    app:srb_rating="4.0" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/tm_testimoni"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:background="@color/colorPrimarySoft"
                 android:padding="@dimen/xmin_padding">
-
-                <ImageView
-                    android:id="@+id/pr_test_ico"
-                    android:layout_width="@dimen/thumb_prop_width"
-                    android:layout_height="@dimen/thumb_prop_height"
-                    android:layout_marginEnd="@dimen/min_padding"
-                    android:contentDescription="nama testimoni"
-                    app:srcCompat="@drawable/ic_person_black_36dp" />
 
                 <TextView
                     android:id="@+id/tm_member_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginBottom="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/pr_test_ico"
-                    android:text="Wiliam Negara"
-                    android:textSize="@dimen/small_text" />
+                    android:padding="@dimen/xmin_padding"
+                    android:text="Honda Jazz"
+                    android:textSize="@dimen/small_text"
+                    android:textStyle="bold"
+                    android:layout_marginLeft="@dimen/xmin_padding"
+                    android:layout_marginRight="@dimen/xmin_padding"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true" />
 
                 <TextView
                     android:id="@+id/tm_member_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
+                    android:textSize="@dimen/under_small_text"
                     android:layout_marginBottom="@dimen/xmin_padding"
-                    android:layout_toRightOf="@+id/tm_member_name"
-                    android:gravity="center_vertical|right"
-                    android:text="15/05/2017" />
-
-                <TextView
-                    android:id="@+id/tm_member_content"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tm_member_name"
-                    android:layout_toRightOf="@+id/pr_test_ico"
-                    android:text="Murah sekaliiiiii" />
+                    android:text="15/05/2017"
+                    android:layout_centerVertical="true"/>
 
             </RelativeLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/small_space"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kebersihan"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="@dimen/almost_tiny_text"/>
+
+                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+                        android:id="@+id/tm_cleanliness"
+                        style="@style/CustomRatingBar"
+                        android:layout_width="75dp"
+                        android:layout_height="30dp"
+                        app:srb_isIndicator="true"
+                        android:layout_gravity="center_horizontal" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kerapihan"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="@dimen/almost_tiny_text"/>
+
+                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+                        android:id="@+id/tm_neatness"
+                        style="@style/CustomRatingBar"
+                        android:layout_width="75dp"
+                        android:layout_height="30dp"
+                        app:srb_isIndicator="true"
+                        app:srb_rating="4.0"
+                        android:layout_gravity="center_horizontal" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="@dimen/small_space"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kebersihan"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="@dimen/almost_tiny_text"/>
+
+                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+                        android:id="@+id/tm_honesty"
+                        style="@style/CustomRatingBar"
+                        android:layout_width="75dp"
+                        android:layout_height="30dp"
+                        app:srb_isIndicator="true"
+                        android:layout_gravity="center_horizontal" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Kerapihan"
+                        android:layout_gravity="center_horizontal"
+                        android:textSize="@dimen/almost_tiny_text"/>
+
+                    <com.iarcuschin.simpleratingbar.SimpleRatingBar
+                        android:id="@+id/tm_comunication"
+                        style="@style/CustomRatingBar"
+                        android:layout_width="75dp"
+                        android:layout_height="30dp"
+                        app:srb_isIndicator="true"
+                        app:srb_rating="4.0"
+                        android:layout_gravity="center_horizontal" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/line"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="@dimen/min_padding"
+                android:layout_marginEnd="@dimen/min_padding"
+                android:background="@color/colorBackgound"/>
+
+            <TextView
+                android:id="@+id/tm_member_content"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/min_padding"
+                android:layout_marginTop="@dimen/min_padding"
+                android:layout_marginBottom="@dimen/min_padding"
+                android:textStyle="italic"
+                android:text="Murah sekaliiiiii" />
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
