--- a/app/src/main/res/layout/trx_item_view.xml
+++ b/app/src/main/res/layout/trx_item_view.xml
@@ -174,6 +174,15 @@
 
                 </RelativeLayout>
 
+                <TextView
+                    android:id="@+id/tr_order_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="10:56:09, 15 Nov 2017"
+                    android:textSize="9sp"
+                    android:layout_alignBottom="@+id/tr_waktu_sewa_end"
+                    android:layout_alignEnd="@+id/tr_waktu_sewa_end"/>
+
             </RelativeLayout>
 
         </LinearLayout>
